# short-video-uploader

./: .gitignore  Cargo.toml  Cross.toml  README.md
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: error.rs  lib.rs
core/src/adapter/: instagram.rs  keyring_store.rs  mock_uploader.rs  mod.rs  oauth.rs  tiktok.rs  vk.rs  youtube.rs
core/src/config/: manager.rs  mod.rs
core/src/domain/: model.rs  port.rs
core/src/service/: mod.rs  upload_orchestrator.rs
core/src/validation/: mod.rs
gui/: Cargo.toml
gui/src/: auth_dialog.rs  main.rs  theme.rs
