[package]
name = "crosspost-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
serde = { workspace = true }
serde_json = "1"
toml = "0.8"
directories = "6"
thiserror = "2"
async-trait = "0.1"
keyring = "3"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
url = "2"
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }
open = "5"
log = "0.4"
sha2 = "0.10"
base64 = "0.22"
tokio-util = { version = "0.7", features = ["codec", "io"] }
